--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ session = ["cookie", "serde/derive"]
 logging = []
 xml = ["dep:quick-xml"]
 minijinja = ["dep:minijinja", "dep:erased-serde"]
-full = ["cookie", "session", "logging", "xml", "minijinja"]
+csrf = ["cookie", "dep:rand", "dep:constant_time_eq"]
+full = ["cookie", "session", "logging", "xml", "minijinja", "csrf"]
 
 [dependencies]
 matchit = "0.9"
@@ -48,3 +49,7 @@ cookie = { version = "0.18", features = ["private", "signed"], optional = true }
 futures-core = "0.3.31"
 http-body = "1.0.1"
 tokio-util = "0.7.17"
+rand = { version = "0.9.2", optional = true, default-features = false, features = [
+    "thread_rng",
+] }
+constant_time_eq = { version = "0.4.2", optional = true }
